# pyflink-fraud-detection-streaming

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml
benchmarks/: __init__.py  benchmark_local_runner.py
data/: sample_transactions.jsonl
docker/flink/: Dockerfile
docker/flink/connectors/: README.md
docs/: analyst-review-ui.md  architecture.md  demo-script.md  flink-kafka-connectors.md  flink-operations.md  iceberg-sink.md  public-dataset-evaluation.md
docs/samples/: drift_report_example.md  high_risk_alert.json  local_runner_output.jsonl  metrics_example.prom
infra/aws/: README.md  managed-validation.md
infra/aws/env/: flink-app.env.example  kinesis.env.example  msk.env.example
infra/aws/terraform/: README.md  main.tf  terraform.tfvars.example  variables.tf
scripts/: generate_transactions.py
src/fraud_streaming/: __init__.py  aws_validation.py  cli.py  config.py  features.py  feedback.py  flink_job.py  local_runner.py  quality.py  replay.py  review_ui.py  rules.py  schemas.py  serialization.py  synthetic.py
src/fraud_streaming/kafka/: __init__.py  consumer.py  producer.py
src/fraud_streaming/ml/: __init__.py  dataset_mapping.py  feature_parity.py  scoring.py  training.py
src/fraud_streaming/monitoring/: __init__.py  drift.py
src/fraud_streaming/observability/: metrics.py
src/fraud_streaming/sinks/: __init__.py  iceberg.py  local.py
tests/: test_aws_validation.py  test_benchmark_script.py  test_drift.py  test_feature_parity.py  test_features.py  test_feedback.py  test_flink_job_config.py  test_kafka_consumer.py  test_kafka_producer.py  test_local_runner.py  test_metrics.py  test_ml_scoring.py  test_ml_training.py  test_quality.py  test_replay.py  test_review_ui.py  test_rules.py  test_serialization.py  test_sinks.py  test_state_compat.py
tests/fixtures/state/: user_profile_state_v1.json  user_profile_state_v2.json
