[tool.poetry]
name = "pyflink-fraud-detection-streaming"
version = "0.1.0"
description = "Stateful fraud detection with PyFlink, Kafka-ready streaming, and explainable alerting."
authors = ["Diogo Ribeiro <hansolo.dj@gmail.com>"]
readme = "README.md"
packages = [{ include = "fraud_streaming", from = "src" }]
license = "MIT"
keywords = ["pyflink", "fraud-detection", "streaming", "kafka", "data-engineering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
"apache-flink" = { version = ">=1.19,<2.3", optional = true }
"kafka-python" = { version = ">=2.0.2,<3.0.0", optional = true }
"pyarrow" = { version = ">=17,<22", optional = true }
"pyiceberg" = { version = ">=0.7,<1.0", optional = true }
"scikit-learn" = { version = ">=1.5,<2.0", optional = true }

[tool.poetry.extras]
flink = ["apache-flink"]
iceberg = ["pyarrow", "pyiceberg"]
kafka = ["kafka-python"]
ml = ["scikit-learn"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
ruff = ">=0.8"
mypy = ">=1.10"

[tool.poetry.scripts]
fraud-local = "fraud_streaming.cli:main"
pyflink-fraud-job = "fraud_streaming.flink_job:main"
fraud-produce-transactions = "fraud_streaming.kafka.producer:main"
fraud-consume-alerts = "fraud_streaming.kafka.consumer:main"
fraud-train-model = "fraud_streaming.ml.training:main"
fraud-check-feature-parity = "fraud_streaming.ml.feature_parity:main"
fraud-replay = "fraud_streaming.replay:main"
fraud-drift-report = "fraud_streaming.monitoring.drift:main"
fraud-feedback-report = "fraud_streaming.feedback:main"
fraud-review-ui = "fraud_streaming.review_ui:main"
fraud-aws-validate = "fraud_streaming.aws_validation:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/fraud_streaming/flink_job.py" = ["ANN401", "I001"]
"src/fraud_streaming/ml/training.py" = ["ANN401"]
"src/fraud_streaming/ml/scoring.py" = ["ANN401"]

[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["pyflink.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["kafka.*", "kafka"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "sklearn"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["scipy.*", "scipy"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pyarrow.*", "pyarrow", "pyiceberg.*", "pyiceberg"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
